--- a/sass/3_layout/_footer.scss
+++ b/sass/3_layout/_footer.scss
@@ -36,6 +36,7 @@
             flex-direction: row;
             justify-content: space-between;
             align-items: center;
+            padding-top: 3rem;
         }
 
         ul {
