--- a/sass/3_layout/_header.scss
+++ b/sass/3_layout/_header.scss
@@ -12,6 +12,9 @@
 
 @include desktop-only {
     .header {
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+
         h1 {
             cursor: default;
         }
