--- a/sass/5_pages/_menu.scss
+++ b/sass/5_pages/_menu.scss
@@ -106,14 +106,17 @@
 
         &__main {
             margin-top: 0;
+            margin-bottom: 100px;
             background-color: $bg-primary;
             padding-bottom: 0;
-
+            padding-top: 0;
+            
             .container {
                 @include flex(false, center, flex-start);
                 flex-wrap: wrap;
                 height: auto;
                 margin-bottom: 3rem;
+                padding-top: 0;
             }
         }
                 
@@ -123,29 +126,42 @@
         }
 
         &__wrapper {
-            width: 40%;
-            padding: 1rem 1rem 2rem 1rem;
+            width: 45%;
+            padding: 2rem;
             margin-bottom: 0;
             border-radius: $border-radius;
             animation: flip 1000ms 150ms forwards;
             transform: rotateY(.7turn);
             opacity: 0;
+            transition: box-shadow 700ms;
+
+            &:hover {
+                @include box-shadow;
+            }
         }
 
         &__photo {
             position: sticky;
             top: 1.5rem;
-            width: 50%;
-            height: auto;
-            margin: 0 auto;
+            width: 52%;
+            margin-right: auto;
             z-index: 0;
+            animation: reveal 1500ms forwards;
+            transform: translateY(50px);
+            opacity: 0;
+            transition: 
+                border-bottom-right-radius 300ms, 
+                border-top-left-radius 300ms;
+
+            &:hover {
+                border-bottom-right-radius: $border-radius-lg;
+                border-top-left-radius: $border-radius-lg;
+            }
         }
 
         &__btn {
-            margin-top: 1.5rem;
-            animation: reveal 1200ms 1500ms forwards;
-            transform: translateY(10%);
-            opacity: 0;
+            position: absolute;
+            bottom: -70px;
         }
     }
 
