--- a/sass/5_pages/_menu.scss
+++ b/sass/5_pages/_menu.scss
@@ -128,10 +128,10 @@ $photo-height-for-tablet: 400px;
             
             .container {
                 @include flex(false, center, flex-start);
-                flex-wrap: wrap;
                 height: auto;
                 margin-bottom: 3rem;
                 padding-top: 0;
+                column-gap: 1.5rem
             }
         }
                 
@@ -141,7 +141,7 @@ $photo-height-for-tablet: 400px;
         }
 
         &__wrapper {
-            width: 45%;
+            width: 50%;
             padding: 2rem;
             margin-bottom: 0;
             border-radius: $border-radius;
@@ -158,19 +158,15 @@ $photo-height-for-tablet: 400px;
         &__photo {
             position: sticky;
             top: 1.5rem;
-            width: 52%;
-            margin-right: auto;
+            width: 50%;
             z-index: 0;
             animation: reveal 1500ms forwards;
             transform: translateY(50px);
             opacity: 0;
-            transition: 
-                border-bottom-right-radius 300ms, 
-                border-top-left-radius 300ms;
+            transition: border-radius 300ms;
 
             &:hover {
-                border-bottom-right-radius: $border-radius-lg;
-                border-top-left-radius: $border-radius-lg;
+                border-radius: $border-radius-lg;
             }
         }
 
