--- a/css/main.css
+++ b/css/main.css
@@ -821,7 +821,7 @@ h4 {
   }
   .menu h2 {
     position: sticky;
-    top: 65px;
+    top: 90px;
     width: 103%;
     margin-top: 0;
     margin-left: -1%;
@@ -863,15 +863,13 @@ h4 {
   .menu__wrapper {
     width: 50%;
     padding: 2rem;
+    padding-top: 0;
     margin-bottom: 0;
     border-radius: 1rem;
     animation: flip 1000ms 150ms forwards;
     transform: rotateY(0.7turn);
     opacity: 0;
     transition: box-shadow 700ms;
-  }
-  .menu__wrapper:hover {
-    box-shadow: 0 5px 8px rgba(0, 0, 0, 0.1);
   }
   .menu__photo {
     position: sticky;
@@ -893,13 +891,38 @@ h4 {
 
   .title-wrapper {
     position: sticky;
-    top: 0;
+    top: 1.5rem;
     right: 0;
     left: 0;
-    margin: 0 -1em;
-    padding: 0 1em;
+    margin: 0 -2em;
+    padding: 0 2em;
     background-color: #f2f2f2;
+    border-radius: 1rem;
     z-index: 2;
+  }
+  .title-wrapper::before {
+    content: "";
+    position: absolute;
+    top: -1.5rem;
+    left: -10px;
+    right: -10px;
+    height: 3rem;
+    background-color: #fff;
+    z-index: -2;
+  }
+  .title-wrapper::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: -3rem;
+    width: 100%;
+    height: 1.5rem;
+    background-color: #f2f2f2;
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+    z-index: -1;
   }
 }
 .container {
