--- a/sass/5_pages/_menu.scss
+++ b/sass/5_pages/_menu.scss
@@ -102,7 +102,7 @@ $photo-height-for-tablet: 400px;
 
         h2 {
             position: sticky;
-            top: 65px;
+            top: 90px;
             width: 103%;
             margin-top: 0;
             margin-left: -1%;
@@ -143,16 +143,13 @@ $photo-height-for-tablet: 400px;
         &__wrapper {
             width: 50%;
             padding: 2rem;
+            padding-top: 0;
             margin-bottom: 0;
             border-radius: $border-radius;
             animation: flip 1000ms 150ms forwards;
             transform: rotateY(.7turn);
             opacity: 0;
             transition: box-shadow 700ms;
-
-            &:hover {
-                @include box-shadow;
-            }
         }
 
         &__photo {
@@ -178,12 +175,39 @@ $photo-height-for-tablet: 400px;
 
     .title-wrapper {
         position: sticky;
-        top: 0;
+        top: 1.5rem;
         right: 0;
         left: 0;
-        margin: 0 -1em;
-        padding: 0 1em;
+        margin: 0 -2em;
+        padding: 0 2em;
         background-color: $bg-secondary-200;
+        border-radius: $border-radius;
         z-index: 2;
+
+        &::before {
+            content: '';
+            position: absolute;
+            top: -1.5rem;
+            left: -10px;
+            right: -10px;
+            height: 3rem;
+            background-color: $bg-primary;
+            z-index: -2;
+        }
+
+        &::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: -3rem;
+            width: 100%;
+            height: 1.5rem;
+            background-color: $bg-secondary-200;
+            border-top-left-radius: $border-radius;
+            border-top-right-radius: $border-radius;
+            z-index: -1;
+        }
     }
 }
