--- a/css/main.css
+++ b/css/main.css
@@ -712,6 +712,9 @@ h4 {
     margin-left: auto;
     padding-bottom: 50px;
   }
+  .home .container {
+    padding-right: 0;
+  }
   .home .intro {
     flex-direction: column;
     width: calc(100% / 3 * 1 - 1rem);
