--- a/sass/5_pages/_home.scss
+++ b/sass/5_pages/_home.scss
@@ -186,7 +186,11 @@
             margin-left: auto;
             padding-bottom: 50px;
         }
-    
+        
+        .container {
+            padding-right: 0;
+        }
+        
         .intro {
             flex-direction: column;
             width: calc(100% / 3 * 1 - 1rem);
