--- a/css/main.css
+++ b/css/main.css
@@ -620,8 +620,7 @@ h4 {
   background-color: #f2f2f2;
 }
 .step__num {
-  position: relative;
-  right: 10px;
+  transform: translateX(-10px);
   padding: 2px 7px;
   border-radius: 50%;
   background-color: #9356DC;
