--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,10 +10,10 @@
 @import '3_layout/header';
 @import '3_layout/footer';
 
-@import '4_components/loader';
 @import '4_components/buttons';
 @import '4_components/cards';
 @import '4_components/dish';
+@import '4_components/spinner';
 
 @import '5_pages/home';
 @import '5_pages/menu';
