--- a/css/main.css
+++ b/css/main.css
@@ -263,7 +263,7 @@ h4 {
   object-position: center;
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
-  transition: object-position 500ms;
+  transition: object-position 500ms ease-out;
 }
 .card__content {
   padding: 1rem;
@@ -303,6 +303,8 @@ h4 {
 @media screen and (min-width: 1024px) {
   .card:hover {
     box-shadow: 0 5px 8px rgba(0, 0, 0, 0.25);
+    transform: scale(1.05);
+    transition: transform 250ms ease-out;
   }
   .card:hover .card__img {
     object-position: 50% 60%;
