add link to footer logo, add animation to footer links

--- a/sass/3_layout/_footer.scss
+++ b/sass/3_layout/_footer.scss
@@ -45,6 +45,11 @@
 
         li {
             margin-left: 2em;
+            transition: transform 150ms ease-out;
+
+            &:hover {
+                transform: scale(1.05);
+            }
         }
 
         &__title {
