--- a/css/main.css
+++ b/css/main.css
@@ -208,6 +208,10 @@ h4 {
   }
   .footer li {
     margin-left: 2em;
+    transition: transform 150ms ease-out;
+  }
+  .footer li:hover {
+    transform: scale(1.05);
   }
   .footer__title {
     margin-bottom: 0;
