--- a/css/main.css
+++ b/css/main.css
@@ -167,20 +167,18 @@ h4 {
   width: 100%;
   background-color: #333333;
 }
-.footer .container {
-  flex-direction: column;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
+.footer .grid {
+  padding: 1rem 2rem;
+  display: grid;
+  grid-template-columns: 1fr;
+}
+.footer ul {
+  text-align: end;
 }
 .footer li:nth-child(1), .footer li:nth-child(2) {
   font-weight: 500;
 }
 .footer a {
-  flex-direction: row;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
   margin: 0.5em 0;
   font-size: 0.9em;
   text-decoration: none;
@@ -193,12 +191,18 @@ h4 {
   margin-right: 1em;
 }
 
+.note {
+  color: white;
+  margin-bottom: 1rem;
+}
+.note > a {
+  display: inline;
+  text-decoration: underline;
+}
+
 @media screen and (min-width: 1024px) {
-  .footer .container {
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 3rem;
+  .footer .grid {
+    grid-template-columns: 200px 1fr 50%;
   }
   .footer ul {
     flex-direction: row;
@@ -215,6 +219,20 @@ h4 {
   }
   .footer__title {
     margin-bottom: 0;
+  }
+
+  .note {
+    margin: 0;
+  }
+  .note a {
+    transition: color 150ms ease-out;
+  }
+  .note a:hover {
+    color: #FF79DA;
+  }
+
+  .grid-item {
+    align-self: center;
   }
 }
 .btn {
